InternexDev_Sandbox/src/objects/Cash_Console_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Cash Console Configuration</description>
    <fields>
        <fullName>Fields__c</fullName>
        <label>Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cash Console Configuration</label>
</CustomObject>